--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "airtable": "^0.11.1",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.15"
   }
 }
