--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "airtable": "^0.11.1",
+    "bottleneck": "^2.19.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
